# pConfig

./: .gitignore  README.md  one_shot.sh
cuda/: install_nvidia_driver.bash
database/: install_mysql.sh
docker/: README.md  ubuntu18_04.dockerfile  ubuntu18_04_cuda10_2_cudnn7.dockerfile  ubuntu18_04_ros_melodic.dockerfile
emacs/.emacs.d/: init.el
emacs/.emacs.d/elpa/: auctex-12.1.1.signed  xclip-1.4.signed
emacs/.emacs.d/extensions/: c_c++.el  color_theme.el  commands.el  global.el  java.el  julia.el  matlab.el  packages.el  python.el  ros.el  tags.el
gtk-3.0/: gtk.css
os/: .bash_config  .bash_personal_commands  .bash_ros  .bashrc  .pythonrc  install_conda.sh  install_docker.sh  install_emacs.sh  install_environment.sh  install_irony_env.sh  install_llvm_8.sh  pyenv_install.sh  replace_dot_files.sh
personal_templates/cpp_cmake_examples_workspace/: CMakeLists.txt
personal_templates/cpp_cmake_examples_workspace/examples/: CMakeLists.txt
personal_templates/cpp_cmake_workspace/: CMakeLists.txt  README.md
personal_templates/cpp_cmake_workspace/examples/: CMakeLists.txt
raspberry_pi/: jessie_to_stretch.md  movidius_neural_compute_stick.md  raspberry_pi_specifications.md  run_movidius_ncs_raspberry_pi.md
ros/: ros_melodic.sh
ros/ros_tools/: CMakeLists.txt  README.md  package.xml
ros/ros_tools/launch/: extract_image_bag_files.launch  process_robovision3.launch  publish_camera_info_from_yaml.launch
ros/ros_tools/scripts/: process_robovision3.py  publish_camera_info_from_yaml.py  utility.py
terminator/: config
tmux/: .tmux.conf
(+128 files in other folders)
