<?xml version="1.0"?>
<package format="2">
  <name>ros_tools</name>
  <version>0.0.0</version>
  <description>The ros_tools package</description>

  <maintainer email="thba1590@gmail.com">ba</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>

  <export>
  </export>
</package>
